error_v7.log
    Checking uci v0.1.0 (C:\Users\denil\Desktop\uci)
error[E0277]: the trait bound `patient::Thing: std::cmp::Eq` is not satisfied
   --> src\frontend\patient_list.rs:34:5
    |
 34 | /     view! {
 35 | |         <div class="p-6 max-w-7xl mx-auto">
 36 | |             <div class="flex justify-between items-center mb-8">
 37 | |                 <div>
...   |
 50 | |                     key=|p| p.id.clone()
    | |                     --- required by a bound introduced by this call
...   |
103 | |         </div>
104 | |     }
    | |_____^ unsatisfied trait bound
    |
help: the trait `std::cmp::Eq` is not implemented for `patient::Thing`
   --> src\models\patient.rs:14:1
    |
 14 | pub struct Thing {
    | ^^^^^^^^^^^^^^^^
    = help: the trait `std::cmp::Eq` is implemented for `std::option::Option<T>`
    = note: required for `std::option::Option<patient::Thing>` to implement `std::cmp::Eq`
note: required by a bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, (), __children)>::key`
   --> C:\Users\denil\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\leptos-0.6.15\src\for_loop.rs:97:8
    |
 50 |     key: KF,
    |     --- required by a bound in this associated function
...
 97 |     K: Eq + Hash + 'static,
    |        ^^ required by this bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, (), __children)>::key`

error[E0277]: the trait bound `patient::Thing: Hash` is not satisfied
   --> src\frontend\patient_list.rs:34:5
    |
 34 | /     view! {
 35 | |         <div class="p-6 max-w-7xl mx-auto">
 36 | |             <div class="flex justify-between items-center mb-8">
 37 | |                 <div>
...   |
 50 | |                     key=|p| p.id.clone()
    | |                     --- required by a bound introduced by this call
...   |
103 | |         </div>
104 | |     }
    | |_____^ unsatisfied trait bound
    |
help: the trait `Hash` is not implemented for `patient::Thing`
   --> src\models\patient.rs:14:1
    |
 14 | pub struct Thing {
    | ^^^^^^^^^^^^^^^^
    = help: the trait `Hash` is implemented for `std::option::Option<T>`
    = note: required for `std::option::Option<patient::Thing>` to implement `Hash`
note: required by a bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, (), __children)>::key`
   --> C:\Users\denil\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\leptos-0.6.15\src\for_loop.rs:97:13
    |
 50 |     key: KF,
    |     --- required by a bound in this associated function
...
 97 |     K: Eq + Hash + 'static,
    |             ^^^^ required by this bound in `ForPropsBuilder::<IF, I, T, EF, N, KF, K, (__each, (), __children)>::key`

error[E0277]: the trait bound `patient::Thing: std::cmp::Eq` is not satisfied
  --> src\frontend\patient_list.rs:48:18
   |
48 |                 <For
   |                  ^^^ unsatisfied trait bound
   |
help: the trait `std::cmp::Eq` is not implemented for `patient::Thing`
  --> src\models\patient.rs:14:1
   |
14 | pub struct Thing {
   | ^^^^^^^^^^^^^^^^
   = help: the trait `std::cmp::Eq` is implemented for `std::option::Option<T>`
   = note: required for `std::option::Option<patient::Thing>` to implement `std::cmp::Eq`
note: required by a bound in `leptos::For`
  --> C:\Users\denil\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\leptos-0.6.15\src\for_loop.rs:97:8
   |
46 | pub fn For<IF, I, T, EF, N, KF, K>(
   |        --- required by a bound in this function
...
97 |     K: Eq + Hash + 'static,
   |        ^^ required by this bound in `For`

error[E0277]: the trait bound `patient::Thing: Hash` is not satisfied
  --> src\frontend\patient_list.rs:48:18
   |
48 |                 <For
   |                  ^^^ unsatisfied trait bound
   |
help: the trait `Hash` is not implemented for `patient::Thing`
  --> src\models\patient.rs:14:1
   |
14 | pub struct Thing {
   | ^^^^^^^^^^^^^^^^
   = help: the trait `Hash` is implemented for `std::option::Option<T>`
   = note: required for `std::option::Option<patient::Thing>` to implement `Hash`
note: required by a bound in `leptos::For`
  --> C:\Users\denil\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\leptos-0.6.15\src\for_loop.rs:97:13
   |
46 | pub fn For<IF, I, T, EF, N, KF, K>(
   |        --- required by a bound in this function
...
97 |     K: Eq + Hash + 'static,
   |             ^^^^ required by this bound in `For`

error[E0599]: the method `children` exists for struct `ForPropsBuilder<{closure@...}, ..., ..., _, _, ..., ..., ...>`, but its trait bounds were not satisfied
   --> src\frontend\patient_list.rs:51:21
    |
 34 | /     view! {
 35 | |         <div class="p-6 max-w-7xl mx-auto">
 36 | |             <div class="flex justify-between items-center mb-8">
 37 | |                 <div>
...   |
 50 | |                     key=|p| p.id.clone()
 51 | |                     children=move |patient| {
    | |                    -^^^^^^^^ method cannot be called due to unsatisfied trait bounds
    | |____________________|
    |
    |
   ::: src\models\patient.rs:14:1
    |
 14 |   pub struct Thing {
    |   ---------------- doesn't satisfy `patient::Thing: Hash` or `patient::Thing: std::cmp::Eq`
    |
   ::: C:\Users\denil\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library/core/src/option.rs:594:1
    |
594 |   pub enum Option<T> {
    |   ------------------ doesn't satisfy `std::option::Option<patient::Thing>: Hash` or `std::option::Option<patient::Thing>: std::cmp::Eq`
    |
    = note: the following trait bounds were not satisfied:
            `patient::Thing: std::cmp::Eq`
            which is required by `std::option::Option<patient::Thing>: std::cmp::Eq`
            `patient::Thing: Hash`
            which is required by `std::option::Option<patient::Thing>: Hash`
    = note: the full name for the type has been written to 'C:\Users\denil\Desktop\uci\target\wasm32-unknown-unknown\debug\deps\uci-86283fec664caf74.long-type-7515332843195750932.txt'
    = note: consider using `--verbose` to print the full type name to the console
help: consider annotating `patient::Thing` with `#[derive(Eq, Hash, PartialEq)]`
   --> src\models\patient.rs:14:1
    |
 14 + #[derive(Eq, Hash, PartialEq)]
 15 | pub struct Thing {
    |

Some errors have detailed explanations: E0277, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `uci` (lib) due to 5 previous errors
